# MAM21

./: .gitignore  .gitmodules  Diagrams.md  README.md  diagrams.html
diagrams/: control.drawio
firmware/MAM21/: .mxproject  MAM21.ioc  Makefile  STM32-for-VSCode.config.yaml  STM32G431C8Tx_FLASH.ld  STM32Make.make  s  til.json
firmware/MAM21/.metadata/: version.ini
firmware/rust/: Cargo.toml  memory.x
firmware/rust/.cargo/: config.toml
firmware/rust/src/: main.rs  utils.rs
hardware/: PCBs_3D.FCStd
hardware/Caps/: Caps-cache.lib  Caps.kicad_pcb  Caps.kicad_prl  Caps.kicad_pro  Caps.pro  Caps.sch  Caps_first.kicad_pcb  fp-lib-table
hardware/Caps/gerbers/: Caps-B_Cu.gbl  Caps-B_Mask.gbs  Caps-B_SilkS.gbo  Caps-Edge_Cuts.gm1  Caps-F_Cu.gtl  Caps-F_Mask.gts  Caps-F_Paste.gtp  Caps-F_SilkS.gto  Caps-NPTH-drl_map.gbr  Caps-NPTH.drl  Caps-PTH-drl_map.gbr  (+4 more)
hardware/Mechanical/: ESC.FCStd  busbars.FCStd  caps.FCStd  controle.FCStd  heatsink.FCStd  support1.FCStd  switches.FCStd
hardware/Simulations/: capacitors.asc.lnk  cascade_rc_filter.asc  cascade_rc_filter.op.raw  cascade_rc_filter.raw
hardware/Switches/: Swiches.FCStd  Swiches.FCStd.6909dcb6-ccee-4242-9144-1b713c2d0ca8  Swiches.FCStd.7de11300-1910-4889-8e49-e070c7df97f1  Swiches.FCStd.f304b007-0ab8-4101-bf0b-3781e927b966  Swiches.FCStd1  Switches-cache.lib  Switches.kicad_pcb  Switches.kicad_prl  Switches.kicad_pro  Switches.pro  Switches.sch  Switches1.kicad_pcb  Switches2.kicad_pcb  Switches3.kicad_pcb  sym-lib-table  ucc27211ddar.dcm  ucc27211ddar.lib
imgs/: imgs.md
simulations/: .gitignore  4q_truth_table.csv  README.md  adc_test (backup)1.psimsch  adc_test.psimsch  chopper.asc  chopper_4q.psimsch  chopper_4q__embedded_controller.c  chopper_4q__sar_adc.c  command_chopper_q4.ipynb  readme.md
simulations/Capacitors/: Draft1.asc  HMK325C7475_MHPE.asy  HMK325C7475_MHPE.cir  capacitors.plt  capacitors_bckup.asc  capacitors_mlcc_tayio_yuden.asc  capacitors_mlcc_tayio_yuden_wcs.asc
simulations/Snubber/: snubber.asc
simulations/chopper/: Draft1.asc  FDBL86062_F085_5P.asy  IPT015N10N5.asy  chopper.asc  chopper.plt  chopper_sensors.asc  mosfet_parallel_test.asc  mosfet_parallel_test.plt  mosfet_test.asc  motor_waveform_study.asc  motor_waveform_study.plt  optimos_5.asy  thermal_design.asc  thermal_generic_material.asc  thermal_generic_material.asy  thermal_mosfet.asc  thermal_mosfet.asy  thermal_mosfet_fr4.asc  thermal_mosfet_fr4.backup.asc  thermal_mosfet_fr4_simple.asc
snubber/: initialize_env.sh  requirements.txt  snubber.ipynb  test.csv
stm32cubemx_m3/: stm32cubemx_m3.ioc
stm32cubemx_m4/: stm32cubemx_m4.ioc
(+219 files in other folders)
