[package]
authors = [""]
name = "mam21"
edition = "2021"
version = "0.1.0"

[dependencies]
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.7"
defmt-rtt = "0.3.2"
defmt = "0.3.2"
cortex-m-semihosting = "0.5.0"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.5"
# cmsis-dsp-sys = "0.3.1"
# lazy_static = { version = "1.4", features = ["spin_no_std"] }

[dependencies.stm32g4xx-hal]
git = "https://github.com/stm32-rs/stm32g4xx-hal"
features = ["stm32g474", "rt"]

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-