[package]
authors = [""]
name = "mam21"
edition = "2021"
version = "0.1.0"

[dependencies]
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nb = "1.0.0"
defmt-rtt = "0.3.2"
defmt = "0.3.2"
# cortex-m-semihosting = "0.5.0"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
stm32-hal2 = {version = "1.5.1", features = ["g431", "g4rt", "bxcan", "embedded_hal"]}
# panic-halt = "0.2.0"
# lazy_static = { version = "1.4", features = ["spin_no_std"] }
# cmsis-dsp-sys = "0.3.1"
fugit = "0.3.6"

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-